--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "@rails/webpacker": "5.4.4",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "license": "MIT",
   },
   "devDependencies": {
     "webpack-dev-server": "^3"
