--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "@rails/webpacker": "5.4.4",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "license": "MIT",
+    "license": "MIT"
   },
   "devDependencies": {
     "webpack-dev-server": "^3"
